<?xml version="1.0"?>
<package>
  <name>rtt_gazebo_msgs</name>
  <version>2.8.2</version>
  <description>This package provides .msg and .srv files for use with the rtt_gazebo package.</description>
  <maintainer email="dwigand@cor-lab.de">Dennis Leroy Wigand</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
